# housing_agent

./: .gitignore
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  constants.py  logging_config.py  main.py  middleware.py
backend/app/agents/: __init__.py  context.py  orchestrator.py  prompts.py  state.py  summaries.py  tools.py
backend/app/graphs/: __init__.py  main_graph.py  state.py
backend/app/integrations/: apify.ipynb
backend/app/models/: billing.py  property.py
backend/app/prompts/: feature_extraction.py  renovation.py
backend/app/services/: analysis_persistence.py  billing_service.py  cost_calculator.py  feature_extractor.py  idealista.py  image_classifier.py  image_downloader.py  knowledge_store.py  openai_client.py  renovation_estimator.py  stripe_service.py  supabase_client.py
backend/notebooks/: fixtures.py  renovation_graph.ipynb  tests.ipynb
backend/sql/: billing_schema.sql
backend/supabase/migrations/: 001_orchestrator_schema.sql  002_add_increment_message_count_rpc.sql
backend/tests/: conftest.py
backend/tests/integration/: test_analyze_billing.py  test_api.py  test_billing_api.py  test_chat_api.py  test_estimate_backward_compat.py  test_group_node.py  test_orchestrator_graph.py  test_scrape_node.py
backend/tests/unit/: test_auth.py  test_billing_service.py  test_cost_calculator.py  test_feature_extractor.py  test_features.py  test_idealista.py  test_image_classifier.py  test_image_downloader.py  test_knowledge_store.py  test_logging_config.py  test_models.py  (+6 more)
(+56 files in other folders)
