[project]
name = "rehabify-backend"
version = "0.1.0"
description = "Backend for Rehabify - AI-powered renovation cost estimator for Portuguese properties"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "openai>=1.55.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.10.0",
    "langsmith>=0.2.0",
    "structlog>=24.0.0",
    "stripe>=11.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
notebook = [
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
